--- a/style.css
+++ b/style.css
@@ -90,33 +90,35 @@ body {
 
     #soul {
         position: absolute;
-        bottom: 0px;
-        right: 10px;
-        z-index: 1;
+        bottom: 0;
+        right: 0;
+        z-index: 2;
     }
 
     #reality {
         position: absolute;
         bottom: 150px;
-        right: 10px;
-        z-index: 3;
+        right: 0px;
+        z-index: 4;
     }
 
     #mind {
         position: fixed;
-        right: 10px;
+        right: 0px;
+        top: 150px;
+        z-index: 1;
     }
 
     #time {
         position: fixed;
-        top: 20px;
-        right: 10px;
+        top: 0;
+        right: 0;
         z-index: 2;
     }
 
     h1 {
         position: sticky;
-        top: 0px;
+        top: 0;
     }
 
     h2 {
